feat: add auth of etcd

--- a/etcd33/Dockerfile
+++ b/etcd33/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir -p /app/static/dist /app/conf
 # COPY --from=frontend /app/dist /app/static/dist
 COPY ./etcd-manage /app
 COPY static/dist /app/static/dist
-COPY conf/config.default.ini /app/conf
+# COPY conf/config.default.ini /app/conf
 EXPOSE 9090
 WORKDIR /app
 CMD ["./etcd-manage"]
