--- a/etcd33/conf/config.default.ini
+++ b/etcd33/conf/config.default.ini
@@ -1,6 +1,6 @@
 [app]
 port=9090
-auth=false
+auth=true
 
 [etcd]
 root_key=root
@@ -8,6 +8,6 @@ dir_value=
 addr=etcd:2379
 username=
 password=
-cert_file=
-key_file=
-ca_file=
+cert_file=/app/conf/client-cert.pem
+key_file=/app/conf/client-key.pem
+ca_file=/app/conf/ca-cert.pem
