--- a/etcd33/conf/config.default.ini
+++ b/etcd33/conf/config.default.ini
@@ -1,11 +1,11 @@
 [app]
 port=9090
-auth=true
+auth=false
 
 [etcd]
 root_key=root
 dir_value=
-addr=etcd:2379
+addr=etcd.ngcli.com:2379
 username=
 password=
 cert_file=/app/conf/client-cert.pem
