--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -1,18 +1,11 @@
-version: '3'
+version: "3"
 
-services: 
+services:
   redis:
-    image: redis:3
-    container_name: "redis3"
-    restart: always
+    image: bitnami/redis
     ports:
-      - 6379:6379
-    volumes: 
-      - ./data:/data
-    networks:
-      - "redisnet"
-    # command: redis-server --appendonly yes
-
-networks: 
-  redisnet: 
-    driver: bridge
+      - "6379:6379"
+    environment:
+      - REDIS_PASSWORD=R_woyoadmin
+    volumes:
+      - redis:/bitnami/redis
