--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   db:
     image: bitnami/mariadb:latest
     restart: always
-    container_name: "mariadb"
     environment:
       MARIADB_DATABASE: connect_two
       MARIADB_ROOT_USER: root
@@ -13,4 +12,4 @@ services:
       - 3306:3306
       - 13306:3306
     volumes:
-      - ./data:/var/lib/mysql
+      - ./data:/bitnami/mariadb
